Fixed navbar being transparent on small screens
fixed stupid past-me giving the menu transparency for some dumb reason

--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,6 @@ img {
 
     .navbar ul {
         padding: 10px;
-        background-color: rgba(0, 0, 0, 0.1);
         border-radius: 10px;
     }
 }
